src/renderer/App.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-size: 8pt;
}

header {
  background: #173a64;
  color: #fff;
  padding: 5px;
}

#logo {
  padding: 5px;
  background: #fff;
  border-radius: 10px;
  float: left;
  margin-top: -6px;
}

#container {
  height: 100%;
  width: 100%;
  font-size: 0;
}

#content {
  background: #fff;
  color: #000;
  padding: 1px;
  min-height: 300px;
  margin: 5px;
  margin-top: 3px !important;
}

#buttons {
  text-align: right;
  width: 15%;
  background: #173a64;
  margin-top: 12px;
  margin-left: 32px;
}

#apps,
#buttons,
#headnote {
  display: inline-block;
  *display: inline;
  zoom: 1;
  vertical-align: top;
  font-size: 12px;
}

#headnote {
  width: 30%;
  background: #173a64;
}

#apps a {
  margin: 4px;
  width: 55%;
  background: #173a64;
}

#apps {
  margin-top: 16px;
  margin-left: 16px;
}

.link-untis img {
  background: #ff9900 !important;
}

.link-miro img {
  background: #ffcf00 !important;
}

.link-schulcloud img {
  background: #fac229 !important;
}

h1,
h2,
h3 {
  font-weight: 300;
  color: #ffb606;
  line-height: 1;
}

h1 {
  font-size: 12pt;
  line-height: 0;
  padding-top: 8px;
  padding-left: 10px;
}

.loader {
  width: 48px;
  height: 40px;
  margin-top: 30px;
  display: inline-block;
  position: relative;
  background: #fff;
  border-radius: 15% 15% 35% 35%;
}

.loader::after {
  content: '';
  box-sizing: border-box;
  position: absolute;
  left: 45px;
  top: 8px;
  border: 4px solid #fff;
  width: 16px;
  height: 20px;
  border-radius: 0 4px 4px 0;
}

.loader::before {
  content: '';
  position: absolute;
  width: 1px;
  height: 10px;
  color: #fff;
  top: -15px;
  left: 11px;
  box-sizing: border-box;
  animation: animloader 1s ease infinite;
}

@keyframes animloader {
  0% {
    box-shadow: 2px 0px rgba(255, 255, 255, 0),
      12px 0px rgba(255, 255, 255, 0.3), 20px 0px rgba(255, 255, 255, 0);
  }
  50% {
    box-shadow: 2px -5px rgba(255, 255, 255, 0.5),
      12px -3px rgba(255, 255, 255, 0.5), 20px -2px rgba(255, 255, 255, 0.6);
  }
  100% {
    box-shadow: 2px -8px rgba(255, 255, 255, 0),
      12px -5px rgba(255, 255, 255, 0), 20px -5px rgba(255, 255, 255, 0);
  }
}

#loading,
#error {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

#loading small {
  margin-left: 7px;
}

#main {
  text-align: center;
}

.app img {
  background: #fff;
  padding: 4px;
  border-radius: 4px;
}

